# python-book-functional-programming

./: .gitignore  Makefile  README.md  logging.yaml  order.py  pyproject.toml  toc.py  todo.py
book/: _config.yml  _toc.yml  intro.md  test-notebook.ipynb
book/content/0020_getting_started/: test-markdown.md
