[tool.poetry]
name = "python-book-functional-programming"
version = "0.1.0"
description = "Functional programming in Python"
authors = ["Yves Vindevogel <yves@vindevogel.net>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyter-book = "^0.13.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
